--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.craftyape</groupId>
 	<artifactId>copypasta</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.2-SNAPSHOT</version>
 	<name>copypasta</name>
 	<description>Copy custom texts to clipboard with the press of a button.</description>
 	<properties>
@@ -30,6 +30,6 @@
 
 	<build>
 		<plugins>
-		</plugins>
+		<plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-compiler-plugin</artifactId><configuration><source>11</source><target>11</target></configuration></plugin></plugins>
 	</build>
 </project>
