--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>de.craftyape</groupId>
     <artifactId>copypasta</artifactId>
-    <version>0.1.1</version>
+    <version>0.1.2</version>
     <name>CopyPasta</name>
     <description>Copy custom texts to clipboard with the press of a button.</description>
     <properties>
@@ -20,9 +20,14 @@
             <version>1.18.32</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
-            <version>2.23.1</version>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.16</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.5.6</version>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
